change in html code image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   }
 
 .active{
-  background-image: url(assets/bgimg2.jpg); 
+  background-image: url(assets/sidebgimage.jpg); 
   background-size: cover; 
   width: 120px;
   height: 39px;
@@ -479,7 +479,7 @@
     <div class="row" style="padding-top:5px;">
       <div class="col-lg-4"></div>
       <div class="col-lg-2">
-        <img src="assets/app store.svg" alt="app store">
+        <img src="assets/app_store.png" alt="app store">
       </div>
       <div class="col-lg-2">
         <img src="assets/google play.png" style="width: 130px; height: 40px;">
