--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
     <div class="row" style="padding-top:5px;">
       <div class="col-lg-4"></div>
       <div class="col-lg-2">
-        <img src="assets/app_store.png" alt="app store">
+        <img src="assets/app_store.png" alt="app store" style="width: 130px; height: 40px;">
       </div>
       <div class="col-lg-2">
         <img src="assets/google play.png" style="width: 130px; height: 40px;">
